# BrowserPasswd

./: Cargo.toml  LICENSE  README.md
.cargo/: config
src/: main.rs
