[package]
name = "browser_passwd"
version = "0.1.0"
authors = ["metaworm <metaworm@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = '2.0.2'
json = '0.12.0'
sqlite = '0.25.0'
base64 = '0.11.0'
rust-ini = '0.14'
structopt = '0.3.7'
libloading = "0.5.2"

[target.'cfg(windows)'.dependencies]
winapi = {version = '0.3.8', features = ['dpapi']}

[profile.release]
panic = 'abort'
lto = true
opt-level = "z"